# chm-converter-skill

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.agents/skills/: chm-converter
.github/skills/chm-converter/: README.md
skills/chm-converter/: SKILL.md
skills/chm-converter/scripts/: chm_to_markdown.py
